# learning-audio-programming

./: Cargo.toml
src/: generate_sinewave.rs  lo_pass_filter.rs  main.rs  plot_frequency.rs  pythagorean_chords.rs
